--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -105,10 +105,8 @@ text {
 .column25 {
   height: 200px;
   padding-top: 60px;
-  padding-left: 150px;
+  padding-left: 90px;
   margin: auto;
-  width: 20%;
-  clear: both;
 }
 .column25 h3 {
   margin-left: 50px;
@@ -116,8 +114,7 @@ text {
 .column50 {
   height: 170px;
   padding-top: 60px;
-  padding-left: 150px;
-  width: 20%;
+  padding-left: 20%;
   margin: auto;
 }
 .column50 h3 {
@@ -128,9 +125,8 @@ text {
 .column75 {
   height: auto;
   padding-top: 60px;
-  padding-left: 150px;
+  padding-left:20%;
   margin: auto;
-  width: 20%;
 }
 .column75 h3 {
   padding-top: 10px;
